[gd_scene load_steps=23 format=3 uid="uid://g0uja46i3wmj"]

[ext_resource type="Script" uid="uid://bb7oye8qve2pw" path="res://general/hitbox.gd" id="1_ouwc6"]
[ext_resource type="Script" uid="uid://b18isbj66e46b" path="res://enemies/harpoon/enemy_harphish.gd" id="1_t2eha"]
[ext_resource type="PackedScene" uid="uid://dh4r1g6730v4m" path="res://enemies/healthbar.tscn" id="2_t2eha"]
[ext_resource type="Script" uid="uid://ckhi5n4l5gx12" path="res://general/state_machine.gd" id="2_yfwn8"]
[ext_resource type="Script" uid="uid://dh5eibqvx4hd0" path="res://enemies/ascend.gd" id="3_3bqhh"]
[ext_resource type="Material" uid="uid://uau5jm8slqrd" path="res://enemies/damage_effect.tres" id="3_nu728"]
[ext_resource type="Script" uid="uid://cte3u6i7bt7q" path="res://enemies/harpoon/harphish_up.gd" id="3_s6hh6"]
[ext_resource type="Script" uid="uid://3e27hwwx48fj" path="res://enemies/harpoon/harphish_descend.gd" id="4_s6hh6"]
[ext_resource type="BoxMesh" uid="uid://bf12t5tj44mei" path="res://enemies/damage_pass.tres" id="4_yfwn8"]
[ext_resource type="Script" uid="uid://wnq3cutdkdr2" path="res://enemies/inactive.gd" id="6_rpg35"]
[ext_resource type="PackedScene" uid="uid://c6epl5nbbij65" path="res://assets/hook_shooter.tscn" id="11_i6621"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s6hh6"]

[sub_resource type="ViewportTexture" id="ViewportTexture_272bh"]
viewport_path = NodePath("ProgressBarViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3bqhh"]
resource_local_to_scene = true
transparency = 1
blend_mode = 4
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.14902)
albedo_texture = SubResource("ViewportTexture_272bh")

[sub_resource type="SphereShape3D" id="SphereShape3D_t2eha"]

[sub_resource type="SphereShape3D" id="SphereShape3D_rpg35"]
radius = 0.697509

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rpg35"]
depth_draw_mode = 1
albedo_color = Color(1, 0.439216, 0.109804, 1)
roughness = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_4haie"]
material = SubResource("StandardMaterial3D_rpg35")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4haie"]
depth_draw_mode = 1
roughness = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_i6621"]
material = SubResource("StandardMaterial3D_4haie")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i6621"]
depth_draw_mode = 1
albedo_color = Color(0, 0, 0, 1)
roughness = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_tdo3o"]
material = SubResource("StandardMaterial3D_i6621")

[node name="EnemyHarphish" type="CharacterBody3D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_t2eha")

[node name="StateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_yfwn8")
metadata/_custom_type_script = "uid://ckhi5n4l5gx12"

[node name="Inactive" type="Node" parent="StateMachine"]
script = ExtResource("6_rpg35")
metadata/_custom_type_script = "uid://eiklno1g3x35"

[node name="Ascend" type="Node" parent="StateMachine"]
script = ExtResource("3_3bqhh")
metadata/_custom_type_script = "uid://eiklno1g3x35"

[node name="Up" type="Node" parent="StateMachine"]
script = ExtResource("3_s6hh6")
metadata/_custom_type_script = "uid://eiklno1g3x35"

[node name="Descend" type="Node" parent="StateMachine"]
script = ExtResource("4_s6hh6")
metadata/_custom_type_script = "uid://eiklno1g3x35"

[node name="Hitbox" type="Area3D" parent="." node_paths=PackedStringArray("Collider", "healthbar", "particles")]
unique_name_in_owner = true
script = ExtResource("1_ouwc6")
Collider = NodePath("HitboxCol")
healthbar = NodePath("HealthBar")
particles = NodePath("Particles")
max_health = 1.0

[node name="HitboxCol" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("CapsuleShape3D_s6hh6")

[node name="HealthBar" parent="Hitbox" instance=ExtResource("2_t2eha")]
transform = Transform3D(2.87319, 0, 0, 0, 0.0541109, 0, 0, 0, 0.45289, 0, 1.38924, 0)
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_3bqhh")

[node name="Particles" type="GPUParticles3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0695744, 0)
emitting = false
amount = 40
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = ExtResource("3_nu728")
draw_pass_1 = ExtResource("4_yfwn8")

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_t2eha")

[node name="Hookextension" type="CharacterBody3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hookextension"]
shape = SubResource("SphereShape3D_rpg35")

[node name="Mesh" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Body" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(1, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
mesh = SubResource("BoxMesh_4haie")

[node name="Body2" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.8, 0, 0, 0, 1, 0, 0, 0, 0.8, 0, 0, 0)
mesh = SubResource("BoxMesh_4haie")

[node name="Body3" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_4haie")

[node name="Eye" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.421232, 0.237286, -0.214415)
mesh = SubResource("BoxMesh_i6621")

[node name="Eyeball" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.514695, 0.237286, -0.214415)
mesh = SubResource("BoxMesh_tdo3o")

[node name="Eyeball2" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.514695, 0.237286, 0.192381)
mesh = SubResource("BoxMesh_tdo3o")

[node name="Eye2" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.421232, 0.237286, 0.197795)
mesh = SubResource("BoxMesh_i6621")

[node name="HookShooter" parent="Mesh" instance=ExtResource("11_i6621")]
unique_name_in_owner = true
transform = Transform3D(-8.74228e-09, 0, -0.2, 0, 0.2, 0, 0.2, 0, -8.74228e-09, -0.566909, 0.576667, -2.47804e-08)

[connection signal="died" from="Hitbox" to="." method="_on_hitbox_died"]
